--- a/comoving_luminosity_distance_look-back time.ipynb
+++ b/comoving_luminosity_distance_look-back time.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "bb372df2",
+   "metadata": {},
+   "source": [
+    "# script to plot comoving distance, luminosity distance and lookback time"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "7e26a6a4",
